--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>Hello Coursera! It is a great course.</h1>
+    <h2>Testing if browser sync is working</h2>
+    <P>Definitely it is working </P>
 </body>
 </html>
