Testing the local server of intellij idea

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Hello Coursera! It is a great course.</h1>
     <h2>Testing if browser sync is working</h2>
     <P>Definitely it is working </P>
+    <h2>Hi! Test 2</h2>
 </body>
 </html>
