--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 </article>
 <div>
     <p>This is a test for new remote to github.</p>
+    <p>This is ne connection to web storm for github.</p>
 </div>
 <footer>
     This is where the footer goes. All rights are reserved &copy;.
