Intellij Idea connection test

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 </article>
 <div>
     <p>This is a test for new remote to github.</p>
-    <p>This is ne connection to web storm for github.</p>
+    <p>This is new connection to web storm for github.</p>
+    <p>This is the second new coonection to github</p>
 </div>
 <footer>
     This is where the footer goes. All rights are reserved &copy;.
