Working with media queries

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </ul>
 </nav>
 <section>
+<!--  Run Command: browser-sync start --server --files "*"  -->
     <h1>Hello Coursera! It is a great course.</h1>
     <h2>Testing if browser sync is working</h2>
     <P>Definitely it is working </P>
