--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Assignment Solution fir Module 2</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-$END$
+<div>
+  <h1> Our Menu</h1>
+</div>
+<div>
+  <section>
+    <h2>Chicken</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
+  </section>
+</div>
+<div>
+  <section>
+    <h2>Beef</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
+  </section>
+</div>
+<div>
+  <section>
+    <h2>Sushi</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
+  </section>
+</div>
 </body>
 </html>
