--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,30 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment Solution fir Module 2</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div>
-  <h1> Our Menu</h1>
-</div>
-<div>
-  <section>
-    <h2>Chicken</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
-  </section>
-</div>
-<div>
-  <section>
-    <h2>Beef</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
-  </section>
-</div>
-<div>
-  <section>
-    <h2>Sushi</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
-  </section>
-</div>
+  <h1>Our Menu</h1>
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <section class="innerContent" >
+        <h2 id="chicken">Chicken</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
+      </section>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <section class="innerContent">
+        <h2 id="beef">Beef</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
+      </section>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <section class="innerContent innerContent-md">
+        <h2 id="sushi">Sushi</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at consectetur, cupiditate dignissimos eligendi error facere inventore minima neque, odit officia possimus quaerat quam veniam voluptatibus. Autem officia rerum voluptate?</p>
+      </section>
+    </div>
+  </div>
+
 </body>
 </html>
