--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -1,22 +1,16 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta title="Module 4 Solution">
-
-    <!-- Bootstrap CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <title>Hello, world!</title>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script>
+    var names = []; // DO NOT REMOVE
+  </script>
+  <script src="js/SpeakHello.js"></script>
+  <script src=js/SpeakGoodBye.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
-<h1>Hello, world!</h1>
-
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="/js/bootstrap.bundle.min.js"></script>
-
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
